header part done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PSG - Paris Saint Germain</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>PSG - Paris Saint Germain</title>
+        <link rel="stylesheet" href="style.css">
+        <script src="https://cdn.tailwindcss.com"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Gulzar&family=Inter:wght@700&family=Lobster&family=Montserrat:wght@200;700&family=Poppins:wght@900&display=swap"
+            rel="stylesheet">
+    </head>
+    <body>
+        <header>
+            <div class="bg-black header-div flex justify-center items-center">
+                <div>
+                    <h1 class="header-text"><span class="font-bold">Paris Saint Germain</span></h1>
+                    <p class="header-para text-center">
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit <br> officia consequat duis enim
+                        velit mollit. Exercitation veniam consequat sunt <br> nostrud amet.
+                    </p>
+                </div>
+            </div>
+            <img class="bannar-img-1" src="./images/bannar-1.png" alt="">
+            <img class="bannar-img-4" src="./images/bannar-img-4.png" alt="">
+            <img class="banner-img-2" src="./images/bannar-img-2.png" alt="">
+            
+            <img class="banner-img-5" src="./images/bannar-img-5.png" alt="">
+            <img class="banner-img-3" src="./images/bannar-img-3.png" alt="">
+        </header>
+        <main>
+
+        </main>
+        <footer>
+
+        </footer>
+        <script src="./js/utilities.js"></script>
+        <script src="./js/calculation.js"></script>
+    </body>
 </html>
