--- a/index.html
+++ b/index.html
@@ -15,29 +15,143 @@
             href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Gulzar&family=Inter:wght@700&family=Lobster&family=Montserrat:wght@200;700&family=Poppins:wght@900&display=swap"
             rel="stylesheet">
     </head>
-    <body>
+    <body class="overflow-x-hidden">
         <header>
             <div class="bg-black header-div flex justify-center items-center">
                 <div>
                     <h1 class="header-text"><span class="font-bold">Paris Saint Germain</span></h1>
                     <p class="header-para text-center">
-                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit <br> officia consequat duis enim
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit <br> officia
+                        consequat duis enim
                         velit mollit. Exercitation veniam consequat sunt <br> nostrud amet.
                     </p>
                 </div>
             </div>
-            <img class="bannar-img-1" src="./images/bannar-1.png" alt="">
-            <img class="bannar-img-4" src="./images/bannar-img-4.png" alt="">
-            <img class="banner-img-2" src="./images/bannar-img-2.png" alt="">
-            
-            <img class="banner-img-5" src="./images/bannar-img-5.png" alt="">
-            <img class="banner-img-3" src="./images/bannar-img-3.png" alt="">
+            <img class="bannar-img-1" src="./images/banner-images/bannar-img-1.png" alt="">
+            <img class="bannar-img-4" src="./images/banner-images/bannar-img-4.png" alt="">
+            <img class="banner-img-2" src="./images/banner-images/bannar-img-2.png" alt="">
+            <img class="banner-img-5" src="./images/banner-images/bannar-img-5.png" alt="">
+            <img class="banner-img-3" src="./images/banner-images/bannar-img-3.png" alt="">
         </header>
         <main>
-
+            <section class="mt-20 flex gap-6 px-[387.5px]">
+                <div class="grid grid-cols-3 gap-6">
+                    <div class="player-div-1">
+                        <img class="body-img-1" src="./images/body-images/body-img-1.png" alt="">
+                        <h1 class="text-white text-center mt-3">Lionel Messi</h1>
+                        <div class="flex gap-4 justify-center mt-2">
+                            <p class="text-white">36 Goals</p>
+                            <p class="text-white">.</p>
+                            <p class="text-white">120 Assist</p>
+                        </div>
+                        <div class="ml-5 mt-6">
+                            <button class="text-white bg-blue-600 text-xl px-20 py-2">SELECT</button>
+                        </div>
+                    </div>
+                    
+                    <div class="player-div-2">
+                        <img class="body-img-2" src="./images/body-images/body-img-2.png" alt="">
+                        <h1 class="text-white text-center mt-3">Neymar Jr</h1>
+                        <div class="flex gap-4 justify-center mt-2">
+                            <p class="text-white">36 Goals</p>
+                            <p class="text-white">.</p>
+                            <p class="text-white">120 Assist</p>
+                        </div>
+                        <div class="ml-5 mt-6">
+                            <button class="text-white bg-blue-600 text-xl px-20 py-2">SELECT</button>
+                        </div>
+                    </div>
+                    <div class="player-div-3">
+                        <img class="body-img-3" src="./images/body-images/body-img-3.png" alt="">
+                        <h1 class="text-white text-center mt-3">Kylian Mbappé</h1>
+                        <div class="flex gap-4 justify-center mt-2">
+                            <p class="text-white">36 Goals</p>
+                            <p class="text-white">.</p>
+                            <p class="text-white">120 Assist</p>
+                        </div>
+                        <div class="ml-5 mt-6">
+                            <button class="text-white bg-blue-600 text-xl px-20 py-2">SELECT</button>
+                        </div>
+                    </div>
+                    <div class="player-div-4">
+                        <img class="body-img-4" src="./images/body-images/body-img-4.png" alt="">
+                        <h1 class="text-white text-center mt-3">Vítor Machado</h1>
+                        <div class="flex gap-4 justify-center mt-2">
+                            <p class="text-white">36 Goals</p>
+                            <p class="text-white">.</p>
+                            <p class="text-white">120 Assist</p>
+                        </div>
+                        <div class="ml-5 mt-6">
+                            <button class="text-white bg-blue-600 text-xl px-20 py-2">SELECT</button>
+                        </div>
+                    </div>
+                    <div class="player-div-5">
+                        <img class="body-img-5" src="./images/body-images/body-img-5.png" alt="">
+                        <h1 class="text-white text-center mt-3">Sergio Ramos</h1>
+                        <div class="flex gap-4 justify-center mt-2">
+                            <p class="text-white">36 Goals</p>
+                            <p class="text-white">.</p>
+                            <p class="text-white">120 Assist</p>
+                        </div>
+                        <div class="ml-5 mt-6">
+                            <button class="text-white bg-blue-600 text-xl px-20 py-2">SELECT</button>
+                        </div>
+                    </div>
+                    <div class="player-div-6">
+                        <img class="body-img-6" src="./images/body-images/body-img-6.png" alt="">
+                        <h1 class="text-white text-center mt-3">Renato Sanches</h1>
+                        <div class="flex gap-4 justify-center mt-2">
+                            <p class="text-white">36 Goals</p>
+                            <p class="text-white">.</p>
+                            <p class="text-white">120 Assist</p>
+                        </div>
+                        <div class="ml-5 mt-6">
+                            <button class="text-white bg-blue-600 text-xl px-20 py-2">SELECT</button>
+                        </div>
+                    </div>
+                </div>
+                <div class=" flex flex-col gap-6">
+                    <div class="selected-players">
+                        <h1 class="text-white text-2xl text-center p-8">Selected - V</h1>
+                        <div>
+                            <ul class="list-decimal list-inside text-white mt-5 player-list">
+                                <li class="m-6">Lionel Messi</li>
+                                <li class="m-6">Kylian Mbappé</li>
+                                <li class="m-6">Neymar Jr</li>
+                                <li class="m-6">Renato Sanches</li>
+                                <li class="m-6">Keylor Navas</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="total-budget">
+                        <h1 class="text-white text-2xl text-center p-8">Budget</h1>
+                        <div class="flex justify-between ml-4 mr-4">
+                            <p class="text-white">Per Player</p>
+                            <input class="w-2/4 border-solid border-1 border-white" type="text" id="">
+                        </div>
+                        <button class="text-white bg-blue-600 text-xl pl-20 pr-20 py-2 mt-6 ml-3">Calculate</button>
+                        <div class="flex justify-between ml-4 mr-4 pt-4">
+                            <h1 class="text-white">Player Expenses</h1>
+                            <p class="text-white">$<span>0000</span></p>
+                        </div>
+                        <div class="flex justify-between ml-4 mr-4 mt-6">
+                            <p class="text-white">Manager</p>
+                            <input class="w-2/4 border-solid border-1 border-white" type="text" id="">
+                        </div>
+                        <div class="flex justify-between ml-4 mr-4 mt-6">
+                            <p class="text-white">Coach</p>
+                            <input class="w-2/4 border-solid border-1 border-white" type="text" id="">
+                        </div>
+                        <button class="text-white bg-blue-600 text-xl pl-[58px] pr-[58px] py-2 mt-6 ml-3">Calculate Total</button>
+                        <div class="flex justify-between ml-4 mr-4 pt-4 mt-6">
+                            <h1 class="text-white">Total</h1>
+                            <p class="text-white">$<span class="total-amount">0000</span></p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer>
-
         </footer>
         <script src="./js/utilities.js"></script>
         <script src="./js/calculation.js"></script>
