website almost done

--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@
                 </div>
             </section>
         </main>
-        <footer>
+        <hr class="w-full mt-[9.125rem]">
+        <footer class="h-[118px] flex justify-center items-center">
+            <p class="text-white">Copyright @ 2022 All Rights Reserved.</p>
         </footer>
         <script src="./js/utilities.js"></script>
         <script src="./js/calculation.js"></script>
