--- a/index.html
+++ b/index.html
@@ -37,77 +37,77 @@
         <main>
             <section class="mt-20 flex gap-6 px-[387.5px]">
                 <div class="grid grid-cols-3 gap-6">
-                    <div class="player-div-1">
+                    <div class="player-div-1 player-card">
                         <img class="body-img-1" src="./images/body-images/body-img-1.png" alt="">
-                        <h1 class="text-white text-center mt-3">Lionel Messi</h1>
+                        <h1 class="text-white text-center mt-3 player-name">Lionel Messi</h1>
                         <div class="flex gap-4 justify-center mt-2">
                             <p class="text-white">36 Goals</p>
                             <p class="text-white">.</p>
                             <p class="text-white">120 Assist</p>
                         </div>
                         <div class="ml-5 mt-6">
-                            <button class="text-white bg-blue-600 text-xl px-20 py-2">SELECT</button>
+                            <button class="text-white bg-blue-600 text-xl px-20 py-2 player-choose-btn">SELECT</button>
                         </div>
                     </div>
                     
-                    <div class="player-div-2">
+                    <div class="player-div-2 player-card">
                         <img class="body-img-2" src="./images/body-images/body-img-2.png" alt="">
-                        <h1 class="text-white text-center mt-3">Neymar Jr</h1>
+                        <h1 class="text-white text-center mt-3 player-name">Neymar Jr</h1>
                         <div class="flex gap-4 justify-center mt-2">
                             <p class="text-white">36 Goals</p>
                             <p class="text-white">.</p>
                             <p class="text-white">120 Assist</p>
                         </div>
                         <div class="ml-5 mt-6">
-                            <button class="text-white bg-blue-600 text-xl px-20 py-2">SELECT</button>
+                            <button class="text-white bg-blue-600 text-xl px-20 py-2 player-choose-btn">SELECT</button>
                         </div>
                     </div>
-                    <div class="player-div-3">
+                    <div class="player-div-3 player-card">
                         <img class="body-img-3" src="./images/body-images/body-img-3.png" alt="">
-                        <h1 class="text-white text-center mt-3">Kylian Mbappé</h1>
+                        <h1 class="text-white text-center mt-3 player-name">Kylian Mbappé</h1>
                         <div class="flex gap-4 justify-center mt-2">
                             <p class="text-white">36 Goals</p>
                             <p class="text-white">.</p>
                             <p class="text-white">120 Assist</p>
                         </div>
                         <div class="ml-5 mt-6">
-                            <button class="text-white bg-blue-600 text-xl px-20 py-2">SELECT</button>
+                            <button class="text-white bg-blue-600 text-xl px-20 py-2 player-choose-btn">SELECT</button>
                         </div>
                     </div>
-                    <div class="player-div-4">
+                    <div class="player-div-4 player-card">
                         <img class="body-img-4" src="./images/body-images/body-img-4.png" alt="">
-                        <h1 class="text-white text-center mt-3">Vítor Machado</h1>
+                        <h1 class="text-white text-center mt-3 player-name">Vítor Machado</h1>
                         <div class="flex gap-4 justify-center mt-2">
                             <p class="text-white">36 Goals</p>
                             <p class="text-white">.</p>
                             <p class="text-white">120 Assist</p>
                         </div>
                         <div class="ml-5 mt-6">
-                            <button class="text-white bg-blue-600 text-xl px-20 py-2">SELECT</button>
+                            <button class="text-white bg-blue-600 text-xl px-20 py-2 player-choose-btn">SELECT</button>
                         </div>
                     </div>
-                    <div class="player-div-5">
+                    <div class="player-div-5 player-card">
                         <img class="body-img-5" src="./images/body-images/body-img-5.png" alt="">
-                        <h1 class="text-white text-center mt-3">Sergio Ramos</h1>
+                        <h1 class="text-white text-center mt-3 player-name">Sergio Ramos</h1>
                         <div class="flex gap-4 justify-center mt-2">
                             <p class="text-white">36 Goals</p>
                             <p class="text-white">.</p>
                             <p class="text-white">120 Assist</p>
                         </div>
                         <div class="ml-5 mt-6">
-                            <button class="text-white bg-blue-600 text-xl px-20 py-2">SELECT</button>
+                            <button class="text-white bg-blue-600 text-xl px-20 py-2 player-choose-btn">SELECT</button>
                         </div>
                     </div>
-                    <div class="player-div-6">
+                    <div class="player-div-6 player-card">
                         <img class="body-img-6" src="./images/body-images/body-img-6.png" alt="">
-                        <h1 class="text-white text-center mt-3">Renato Sanches</h1>
+                        <h1 class="text-white text-center mt-3 player-name">Renato Sanches</h1>
                         <div class="flex gap-4 justify-center mt-2">
                             <p class="text-white">36 Goals</p>
                             <p class="text-white">.</p>
                             <p class="text-white">120 Assist</p>
                         </div>
                         <div class="ml-5 mt-6">
-                            <button class="text-white bg-blue-600 text-xl px-20 py-2">SELECT</button>
+                            <button class="text-white bg-blue-600 text-xl px-20 py-2 player-choose-btn">SELECT</button>
                         </div>
                     </div>
                 </div>
@@ -116,11 +116,7 @@
                         <h1 class="text-white text-2xl text-center p-8">Selected - V</h1>
                         <div>
                             <ul class="list-decimal list-inside text-white mt-5 player-list">
-                                <li class="m-6">Lionel Messi</li>
-                                <li class="m-6">Kylian Mbappé</li>
-                                <li class="m-6">Neymar Jr</li>
-                                <li class="m-6">Renato Sanches</li>
-                                <li class="m-6">Keylor Navas</li>
+                                
                             </ul>
                         </div>
                     </div>
@@ -128,12 +124,12 @@
                         <h1 class="text-white text-2xl text-center p-8">Budget</h1>
                         <div class="flex justify-between ml-4 mr-4">
                             <p class="text-white">Per Player</p>
-                            <input  class="w-2/4 border-solid border-1 border-white" type="text" id="per-player-value">
+                            <input  class="w-2/4 border-solid border-1 border-white" type="text" id="per-player-value" value="">
                         </div>
                         <button id="player-value-calculate" class="text-white bg-blue-600 text-xl pl-20 pr-20 py-2 mt-6 ml-3">Calculate</button>
                         <div class="flex justify-between ml-4 mr-4 pt-4">
                             <h1 class="text-white">Player Expenses</h1>
-                            <p class="text-white">$<span id="player-expenses-total">0000</span></p>
+                            <p class="text-white">$<span id="player-expenses-total">0</span></p>
                         </div>
                         <div class="flex justify-between ml-4 mr-4 mt-6">
                             <p class="text-white">Manager</p>
