--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
                 <div>
                     <h1 class="header-text"><span class="font-bold">Paris Saint Germain</span></h1>
                     <p class="header-para text-center">
-                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit <br> officia
-                        consequat duis enim
-                        velit mollit. Exercitation veniam consequat sunt <br> nostrud amet.
+                        Paris Saint-Germain Football Club commonly referred to as Paris 
+                        Saint-Germain,<br> Paris, Paris SG or simply PSG is a professional football club based in Paris, France. <br> They compete in
+                        Ligue 1, the top division of French football. <br> As France's most successful club, they have won over 40 official honours,<br>
+                        including ten league titles and one major European trophy. Their home ground is  <br> the Parc des Princes.
                     </p>
                 </div>
             </div>
@@ -124,7 +125,7 @@
                         <h1 class="text-white text-2xl text-center p-8">Budget</h1>
                         <div class="flex justify-between ml-4 mr-4">
                             <p class="text-white">Per Player</p>
-                            <input  class="w-2/4 border-solid border-1 border-white" type="text" id="per-player-value" value="">
+                            <input  class="w-2/4 border-solid border-1 border-white" type="number" id="per-player-value" value="">
                         </div>
                         <button id="player-value-calculate" class="text-white bg-blue-600 text-xl pl-20 pr-20 py-2 mt-6 ml-3">Calculate</button>
                         <div class="flex justify-between ml-4 mr-4 pt-4">
@@ -133,11 +134,11 @@
                         </div>
                         <div class="flex justify-between ml-4 mr-4 mt-6">
                             <p class="text-white">Manager</p>
-                            <input class="w-2/4 border-solid border-1 border-white" type="text" id="manager-value">
+                            <input class="w-2/4 border-solid border-1 border-white" type="number" id="manager-value">
                         </div>
                         <div class="flex justify-between ml-4 mr-4 mt-6">
                             <p class="text-white">Coach</p>
-                            <input class="w-2/4 border-solid border-1 border-white" type="text" id="coach-value">
+                            <input class="w-2/4 border-solid border-1 border-white" type="number" id="coach-value">
                         </div>
                         <button id="calculate-total" class="text-white bg-blue-600 text-xl pl-[58px] pr-[58px] py-2 mt-6 ml-3">Calculate Total</button>
                         <div class="flex justify-between ml-4 mr-4 pt-4 mt-6">
@@ -154,7 +155,6 @@
         <footer class="h-[118px] flex justify-center items-center">
             <p class="text-white">Copyright @ 2022 All Rights Reserved.</p>
         </footer>
-        <script src="./js/utilities.js"></script>
         <script src="./js/calculation.js"></script>
     </body>
 </html>
